# c_cmake_template

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  tags
fuzz/: CMakeLists.txt  fuzz_my_project.cxx
lib/my_project/: CMakeLists.txt
lib/my_project/include/my_project/: my_project.h
lib/my_project/src/: my_project.c
my_project/: CMakeLists.txt
my_project/src/: main.c
test/: CMakeLists.txt  test_my_project.c
